Move metadata to YAML files

--- a/examples/q2/ta1/dbied-buy-explosives.yaml
+++ b/examples/q2/ta1/dbied-buy-explosives.yaml
@@ -1,4 +1,7 @@
-- steps:
+- schema_id: "cmu:make-dbied-purchaseExpl"
+  schema_name: "DBIED Manufacture (explosives purchased)"
+  schema_dscpt: "Description of making drone-based IED, when explosives are purchased"
+  steps:
   - id: obtain-drone
     primitive: Transaction.Exchange
     slots:
