--- a/examples/q2/ta1/vbied-manufacture-explosives.yaml
+++ b/examples/q2/ta1/vbied-manufacture-explosives.yaml
@@ -9,7 +9,7 @@
       - VBIED1-sent19
       - VBIED1-sent20
     slots:
-      - role: AcquirerOrRecipient
+      - role: Recipient
         refvar: attacker
         constraints: ['PER', 'ORG', 'SID']
       - role: AcquiredEntity
@@ -23,20 +23,20 @@
       - VBIED1-sent23
       - VBIED1-sent24
     slots:
-      - role: Agent
+      - role: ManufacturerAssembler
         refvar: attacker
         constraints: ['PER', 'ORG', 'SID']
       - role: Instrument
         refvar: plans
         constraints: ['ABS']
-      - role: Result
+      - role: Artifact
         refvar: explosives
         constraints: ['WEA']
         reference: Q12870 # explosive material     
   - id: obtain-vehicle
     primitive: 'Transaction.ExchangeBuySell'
     slots:
-      - role: AcquirerOrRecipient
+      - role: Recipient
         refvar: attacker
         constraints: ['PER', 'ORG', 'SID']
       - role: AcquiredEntity
@@ -49,7 +49,7 @@
       - VBIED1-sent28
       - VBIED1-sent29
     slots:
-      - role: Agent
+      - role: ManufacturerAssembler
         refvar: attacker
         constraints: ['PER', 'ORG', 'SID']
       - role: Components
@@ -61,7 +61,7 @@
       - role: Instrument
         constraints: ['ABS']
         refvar: plan
-      - role: Result
+      - role: Artifact
         constraints: ['WEA']
         reference: Q11244 # car bomb
   order:
