--- a/mypy.ini
+++ b/mypy.ini
@@ -6,3 +6,11 @@ strict: True
 disallow_untyped_calls: False
 no_implicit_reexport: False
 warn_unreachable: True
+# For pydantic
+plugins = pydantic.mypy
+
+[pydantic-mypy]
+init_forbid_extra = True
+init_typed = True
+warn_required_dynamic_aliases = True
+warn_untyped_fields = True
