--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,12 +4,15 @@ target-version = ['py37']
 
 [tool.isort]
 py_version = "37"
+known_local_folder = ["yaml2sdf", "yaml_schema"]
 line_length = 100
 atomic = true
 force_sort_within_sections = true
 profile = "black"
 
 [tool.pylint.basic]
+# Required to make packages with Cython extensions work
+extension-pkg-whitelist = "pydantic"
 # Allows shorter names than the default regex,
 # which is in pylint.checkers.base.SnakeCaseStyle.DEFAULT_NAME_RGX
 variable-rgx = "(([a-z][a-z0-9_]*)|(_[a-z0-9_]*))$"
